# rustyboi-advance

./: .gitignore  Cargo.toml  README.md  build-wasm.sh
.github/workflows/: build.yaml
rustyboi-advance-core/: Cargo.toml
rustyboi-advance-core/src/: cartridge.rs  gba.rs  lib.rs  ppu.rs
rustyboi-advance-core/src/cpu/: arm7tdmi.rs  mod.rs  opcodes.rs  registers.rs
rustyboi-advance-core/src/memory/: buffer.rs  dma.rs  mmio.rs  mod.rs  timing.rs
rustyboi-advance-debugger/: Cargo.toml
rustyboi-advance-debugger/benches/: decoder.rs
rustyboi-advance-debugger/src/: disassembler.rs  disassembler_tests.rs  lib.rs  test_data.rs
rustyboi-advance-egui/: Cargo.toml
rustyboi-advance-egui/src/: actions.rs  file_dialog.rs  keybind_settings.rs  lib.rs  ui.rs
rustyboi-advance-egui/src/debug/: cpu_registers.rs  memory_explorer.rs  mod.rs  ppu_debug.rs  stack_explorer.rs
rustyboi-advance-platform/: Cargo.toml
rustyboi-advance-platform/src/: app.rs  app_state.rs  config.rs  egui_renderer.rs  framework.rs  input.rs  lib.rs  main.rs  renderer.rs  run.rs  world.rs
rustyboi-advance-platform/src/shaders/: gameboy.wgsl
web/: index.html  main.js
