[package]
name = "rustyboi-advance-core"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_advance_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
zip = { version = "2.4.2", default-features = false, features = ["deflate","deflate64","lzma"] }
