[package]
name = "rustyboi-advance-debugger"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_advance_debugger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]