[package]
name = "rustyboi-advance-egui"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_advance_egui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rustyboi-advance-core = { path = "../rustyboi-advance-core" }
rustyboi-advance-debugger = { path = "../rustyboi-advance-debugger" }
egui = "0.32.3"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rfd = { version = "0.15.4", features = ["async-std"] }
wasm-bindgen-futures = "0.4.54"
