[package]
name = "rustyboi-advance-platform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustyboi-advance-platform"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_advance_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
rustyboi-advance-core = { path = "../rustyboi-advance-core" }
rustyboi-advance-egui = { path = "../rustyboi-advance-egui" }
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
egui = "0.32.3"
egui-wgpu = { version = "0.32.3", features = ["winit"] }
log = "0.4.28"
pollster = "0.3"
rodio = "0.19"
serde_json = "1.0.145"
winit = "0.30.12"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.32.3", default-features = false, features = ["clipboard", "links", "wayland", "x11"] }
wgpu = "27.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.32.3", default-features = false, features = ["links"] }
web-sys = { version = "0.3.81", features = ["GpuTextureFormat"] }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
wgpu = { version = "27.0.1", features = ["webgl"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-reference-types", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-reference-types", "--enable-nontrapping-float-to-int"]
